# routes/api.php
@@ -1,13 +1,16 @@
 <?php
 
-use App\Http\Controllers\AdminController;
-use App\Http\Controllers\BookingController;
-use App\Http\Controllers\CustomerController;
-use App\Http\Controllers\ProductController;
-use App\Http\Controllers\PaymentController;
-use App\Http\Controllers\KonfirmasiController;
+use App\Http\Controllers\API\AdminController;
+use App\Http\Controllers\API\BookingController;
+use App\Http\Controllers\API\CustomerController;
+use App\Http\Controllers\API\ProductController;
+use App\Http\Controllers\API\PaymentController;
+use App\Http\Controllers\API\KonfirmasiController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\API\UserController;
+
+
 
 //swagger
 use App\Http\Controllers\API\CategoryController;
@@ -22,28 +25,31 @@ Route::apiResource('admins', AdminController::class);
 Route::apiResource('products', ProductController::class);
 Route::apiResource('payments', PaymentController::class);
 Route::apiResource('konfirmasi', KonfirmasiController::class);
+Route::apiResource('users', UserController::class); 
 
 Route::group([], function () {
+    // Produk
     Route::get('product', [ProductController::class, 'ListProduct']);
-    Route::post('/', [ProductController::class, 'store']);
-});
+    Route::post('product', [ProductController::class, 'store']);
 
-Route::group([], function () {
+    // Customer
     Route::get('customer', [CustomerController::class, 'ListCustomer']);
-});
 
-Route::group([], function () {
+    // Booking
     Route::get('booking', [BookingController::class, 'ListBooking']);
-});
 
-Route::group([], function () {
+    // Payment
     Route::get('payment', [PaymentController::class, 'ListPayment']);
-});
 
-Route::group([], function () {
+    // Admin
     Route::get('admin', [AdminController::class, 'ListAdmin']);
-});
 
-Route::group([], function () {
+    // Konfirmasi
     Route::get('konfirmasi', [KonfirmasiController::class, 'ListKonfirmasi']);
+
+    // User (tambahan)
+    Route::get('user', [UserController::class, 'index']);
+    Route::post('user', [UserController::class, 'store']);
+    Route::put('user/{id}', [UserController::class, 'update']);
+    Route::delete('user/{id}', [UserController::class, 'destroy']);
 });
